# haskell-book-ex

./: README.md  c11cx_aspatt.hs  c11cx_ciphers.hs  c11cx_language.hs  c11cx_phone.hs  c11farmer.hs  c11goats.hs  c11progs.hs  c12cx_athe.hs  c12cx_either.hs  c12cx_maybe.hs  c12cx_natint.hs  c12cx_unfold.hs  c13_hangman.hs  c13cx_palindrome.hs  c15_madlibs.hs  c15_maybemonoid.hs  c15_optional.hs  c15_quickcheck.hs  c15cx_trivial.hs  c16_cx.hs  c16_either.hs  c16_funcInstances.hs  c16_functorLaws.hs  c16_nat.hs  c16_replaceExp.hs  c16_sumFunctor.hs  c17_lookup.hs
c11/: binaryt.hs  butt.hs  cars.hs  cx_hutton.hs
c13/: cx_ciphers.hs  cx_person.hs  hangman.hs  twoo.hs
c14/addition/: Addition.hs  addition.cabal
c14/morse/: .gitignore  package.yaml
c15/: c15_boolmonoid.hs  c15cx_mem.hs  c15cx_trivial.hs
c16/: BoolPlus.hs  BoolPlusM.hs  Company.hs  Sum.hs  c16_cx.hs  c16_funcInstances.hs  c16_heavy.hs  c16_possibly.hs
c17/: Combinations.hs  apConstant.hs  apIdentity.hs  apMaybe.hs  fixerUpper.hs  interchange.hs  lookups.hs  person.hs
c18/: BindSequence.hs  ChapExFunc.hs  DoSomething.hs  MaybeCow.hs  MonadComp.hs  SoftwareShop.hs  Sum.hs  bind.hs
c18/prop-tests/: README.md  prop-tests.cabal
c18/prop-tests/src/: BadMonad.hs  ChapEx.hs
c19/: shawty.cabal
c20/: chapEx.hs  library.hs
c21/: c21.cabal
c22/: ReaderPractice.hs  boop.hs  dog.hs  monad.hs  reading.hs  warmup.hs
c23/: Exercises.hs  FizzBuzz.hs  Main.hs  RandomExample.hs  RandomExample2.hs  c23.cabal  game.hs  moi.hs
c23/rand/: rand.cabal
c23/rand/src/: FizzBuzz.hs  RandomExample2.hs
c24/: twowrongs.hs
c25/: Identity.hs  MT.hs  Main.hs  c25.cabal
c26/: instances.hs
(+35 files in other folders)
