name:                prop-tests
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/prop-tests#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:
      src
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , checkers
  exposed-modules:
      BadMonad
    , ChapEx
  other-modules:
      Paths_prop_tests
  default-language: Haskell2010

executable prop-tests
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
